--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -71,6 +71,10 @@
           "listLayout": true
         },
         "preload": false
+      },
+        "createModel": {
+        "type": "sap.ui.model.json.JSONModel",
+        "settings": {}
       }
     },
     "resources": {
