--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -72,7 +72,7 @@
         },
         "preload": false
       },
-        "createModel": {
+      "createModel": {
         "type": "sap.ui.model.json.JSONModel",
         "settings": {}
       }
@@ -118,5 +118,9 @@
       "id": "App",
       "async": true
     }
+  },
+  "sap.cloud": {
+    "public": true,
+    "service": "productinventorymanagement"
   }
 }
